# bbcat-dsp

./: CMakeLists-bbcat.txt  CMakeLists.txt  Makefile.am  README  bbcat-control-uninstalled.pc.in  bbcat-control.pc.in  bbcat-dsp-uninstalled.pc.in  bbcat-dsp.pc.in  configure.ac  doxygen.cfg
debian/: changelog  control
share/: licences.txt
src/: AllPassFilter.h  AudioObjectCursor.h  AudioObjectParameters.cpp  AudioObjectParameters.h  BiQuad.cpp  BiQuad.h  BlockConvolver.cpp  BlockConvolver.h  CMakeLists.txt  Convolve.cpp  Convolve.h  Convolver.cpp  Convolver.h  FractionalSample.cpp  FractionalSample.h  Histogram.h  Interpolator.h  Makefile.am  MultilayerBuffer.h  RingBuffer.h  RunningAverage.h  SOFA.cpp  SOFA.h  SoundDelayBuffer.cpp  SoundDelayBuffer.h  SoundFormatConversions.cpp  SoundFormatConversions.h  SoundFormatRawConversions.cpp  SoundMixing.cpp  SoundMixing.h  genconversions.php  register.cpp  register.h  version.cpp.in
test/: BlockConvolverTest.cpp  Makefile.am
